<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.filter.FilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twDispositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dispositivo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroupDispositivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twDispositivo">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/PcButton"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="Computer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/CellulareButton"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="Cellulare" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/TabletButton"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tablet" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:id="@+id/view0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroupDispositivo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twTipologia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/tipologia"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroupTipologia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twTipologia"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/desktop"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/desktop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notebook"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notebook" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:id="@+id/view1"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroupSistemaOperativo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twUtilizzo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/utilizzo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroupUtilizzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twUtilizzo"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/game"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/studio"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/studio" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lavoro"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lavoro" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="invisible"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroupUtilizzo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twPrezzo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prezzo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/length_range"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view0" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:valueFrom="0"
            android:valueTo="2000"
            android:stepSize="50"
            app:haloColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twPrezzo"
            app:thumbColor="#673ab7"
            app:tickColor="@color/white"
            app:tickColorInactive="@color/white_traspartent"
            app:trackColorActive="#f44336"
            app:values="@array/initial_slider_values" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twSO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Sistema Operativo"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroupSistemaOperativo"
            android:layout_width="match_parent"
            android:visibility="invisible"
            app:singleSelection="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twSO">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSO1"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Windows" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSO2"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MacOS" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSO3"
                style="@style/WhiteOutlinedButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Linux" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/buttonCerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F7FFFE"
            android:text="CERCA"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroupTipologia" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>